--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 auto: true
 markdown: rdiscount
 permalink: /:year/:month/:day/:title
-rdiscount
-  extensions: [smart]
+rdiscount extensions: [smart]
